--- a/index.html
+++ b/index.html
@@ -125,15 +125,7 @@
       </div>
   </footer>
   
-  <script>
-    const hamburger = document.getElementById('hamburger');
-    const navLinks = document.getElementById('menu');
-    const button = document.getElementById('btn1');
-
-      hamburger.addEventListener('click', () => {
-      navLinks.classList.toggle('show');
-      button.classList.toggle('show');
-    }); 
+  <script src="script.js">
   </script>
 </body>
 </html>
